# EagleEye

./: .gitignore  .ignore  AGENTS.md  EagleEye.code-workspace  EagleEye.sln  EagleEye.uproject  LinuxEagleEye.code-workspace  Makefile  Win10EagleEye.code-workspace  Win11EagleEye.code-workspace  opencv_dnn_test  opencv_dnn_test2  opencv_dnn_test320  pyproject.toml
Config/: DefaultEngine.ini  DefaultGame.ini
Docs/: InferenceDependencies.md
Private/: CameraComp.cpp
Public/: CameraComp.h
Scripts/: launch-editor-migraphx.sh  package-linux-metrics.sh  package-win10-directml.ps1  setup-inference-deps.ps1  setup-inference-deps.sh
Source/: EagleEye.Target.cs  EagleEyeEditor.Target.cs
python/: pyproject.toml
research/: 2026-05-29-depth-detection-improvements.md  2026-05-29-depth-only-detection.md  2026-05-29-detection-regression.md  2026-05-29-realistic-character-camera.md  2026-06-05-dynamic-classes-detection.md  2026-06-05-pawn-ai-overlap-cleanup.md  2026-06-05-pawn-ai-overlap.md  2026-06-05-random-movement-settings.md  2026-06-06-bot-detection-metrics.md  2026-06-06-settings-menu-yolo.md  2026-06-07-behavior-tree-reconfigure.md  2026-06-07-blueprint-bt-migration.md  2026-06-07-bot-healer-ai.md  2026-06-07-bot-healer-melee-ranged.md  2026-06-07-building-actor-generation.md  2026-06-07-building-foliage-style.md  2026-06-07-building-wall-visibility.md  2026-06-07-check-logs-after-fixes.md  2026-06-07-check-logs-screen-debug.md  2026-06-07-check-menu-logs-now.md  2026-06-07-check-menu-logs.md  2026-06-07-check-model-debug-apply.md  2026-06-07-check-new-model-use.md  (+68 more)
(+66 files in other folders)
