[project]
name = "eagleeye"
version = "0.1.0"
description = ""
authors = [
    {name = "Saranthyr",email = "41912731+Saranthyr@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics (>=8.4.60,<9.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false