[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "Saranthyr",email = "41912731+Saranthyr@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics (>=8.3.239,<9.0.0)",
    "onnx (>=1.20.0,<2.0.0)",
    "onnxslim (>=0.1.80,<0.2.0)",
    "uv (>=0.9.17,<0.10.0)",
    "onnxruntime (>=1.23.2,<2.0.0)"
]

[dependency-groups]
dev = [
    "ultralytics (>=8.3.239,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false